plate fields endpoints